# hackergame

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  build_docker_image.sh  docker-compose.yml  docker-run.sh  hgtest-update.sh  manage.py  mypy.ini  nginx-site  pyproject.toml  requirements-dev.txt  requirements-lock.txt  requirements-manual.txt  requirements.txt  uwsgi-app.ini
.github/workflows/: build.yml  lint&test.yml  smoketest.yml
apps/: README.md
apps/otp/: apps.py  models.py
backend/: manage.py  requirements.txt  setup.cfg
backend/announcement/: admin.py  apps.py  urls.py  (+3 more)
conf/: local_settings.py.example  pgbouncer.ini  uwsgi.ini
ctf/: admin.py  context_processors.py  models.py  views.py
deploy/: Dockerfile  Dockerfile_nginx  deploy_test.sh  entrypoint.sh  nginx.conf  supervisor.conf
docker/: .env.example  start.sh
docs/: backend.md  demands.md  interfaces.md
frontend/: README.md  adapters.py  admin.py  context_processors.py  middleware.py  models.py  tests.py  urls.py  utils.py  views.py  wsgi.py
hackergame/: context_processors.py  settings.py  urls.py  wsgi.py
local/: admin.py  apps.py  models.py  views.py
logout/: apps.py  views.py
nickname/: apps.py  views.py
otp/: __init__.py  apps.py  context_processors.py  models.py  sites.py
pressure_test/: generate_data.py
scripts/: fake_data.py
server/: README.md  context.py  exceptions.py  urls.py
static/: main.css
templates/: base.html  board.html  hub.html  upload.html
terms/: apps.py  mixins.py  models.py  views.py
upload/: views.py
utils/: cache.py  models.py
(+333 files in other folders)
