[project]
name = "hackergame"
version = "0.1.0"
description = "Hackergame platform for 2018 and beyond"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "asgiref==3.7.2",
    "cryptography==44.0.1",
    "django==4.2.28",
    "django-allauth==65.13.0",
    "gevent==24.11.1",
    "markdown==3.7",
    "psycopg==3.2.3",
    "psycopg-binary==3.2.3",
    "psycopg-pool==3.2.3",
    "pycryptodome==3.21.0",
    "pygments==2.18.0",
    "pyjwt==2.9.0",
    "pymemcache==4.0.0",
    "pyopenssl==24.3.0",
    "pyyaml==6.0.2",
    "requests==2.32.4",
    "uwsgi==2.0.28",
]
